# boardgamegeek

./: .gitignore  README.rst  pyproject.toml
boardgamegeek/: api.py  main.py  utils.py
boardgamegeek/loaders/: geeklist.py
boardgamegeek/objects/: games.py  geeklist.py
